manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moodle-prod
  labels:
    app.kubernetes.io/name: moodle
    app.kubernetes.io/version: "5.1"
    environment: production
