manifests/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-ingress
  namespace: moodle-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/proxy-read-timeout: "300"
    traefik.ingress.kubernetes.io/proxy-write-timeout: "300"
    traefik.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - mcc.tesoem.edu.mx
    secretName: mcc-tesoem-tls
  rules:
  - host: mcc.tesoem.edu.mx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moodle
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-ingress-http
  namespace: moodle-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: moodle-prod-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: mcc.tesoem.edu.mx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moodle
            port:
              number: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: moodle-prod
spec:
  redirectScheme:
    scheme: https
    permanent: true
